# homework_22

./: .env.sample  .env_sample  .gitignore  categories.json  products.json  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_delete_blog.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templates/blog/includes/: inc_menu.html
catalog/: apps.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_category_remove_dog_breed_product_delete_breed_and_more.py  0003_alter_product_category.py  0004_product_views_counter_alter_product_category_and_more.py  0005_remove_product_views_counter_alter_product_image_and_more.py  0006_alter_product_image.py  0007_alter_product_options_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  product_list.html  products_detail.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: tags_my.py
config/: settings.py  urls.py  wsgi.py
congig/: asgi.py  settings.py  urls.py  wsgi.py
newapp/: urls.py
newapp/templates/: contacts.html
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: user_form.html
(+1 files in other folders)
