[tool.poetry]
name = "homework-25"
version = "0.1.0"
description = ""
authors = [""]
readme = ""

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
black = "^24.10.0"
pillow = "^11.0.0"
static = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
